feat: Update app name to KerjoCurup, configure deep linking, and remove the landing page module.

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -7,19 +7,19 @@
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <meta
       name="description"
-      content="OjekHub - Penghubung petani dan tenaga kerja"
+      content="KerjoCurup - Penghubung petani dan tenaga kerja"
     />
 
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="OjekHub" />
+    <meta name="apple-mobile-web-app-title" content="KerjoCurup" />
     <link rel="apple-touch-icon" href="icons/Icon-192.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>OjekHub</title>
+    <title>KerjoCurup</title>
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
